--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
 <html>
 
-<meta https="cache-control" content="max-age=0">
-<meta https="cache-control" content="no-cache">
-<meta https="expires" content="-1">
-<meta https="pragma" content="no-cache">
+<meta http-equiv="cache-control" content="max-age=0">
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="-1">
+<meta http-equiv="pragma" content="no-cache">
 
     <head>
 
